Fix text aligning

--- a/style.css
+++ b/style.css
@@ -502,7 +502,6 @@ footer ul {
   padding: 0 2em 2em;
   max-width: 1000px;
   margin: 0 auto;
-  text-align: center;
 }
 
 .portfolio-item-individual > img {
